@@ -388,7 +388,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <argLine>@{argLine} ${env.MAVEN_OPTS} --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -Djava.net.preferIPv4Stack=true ${debug.opts}</argLine>
+               <argLine>@{surefire.argLine} -Djava.net.preferIPv4Stack=true</argLine>
                <systemProperties>
                   <property>
                      <name>jcr.test.configuration.file</name>
@@ -1345,12 +1345,6 @@
                </plugin>
             </plugins>
          </build>
-      </profile>
-      <profile>
-         <id>debug</id>
-         <properties>
-            <debug.opts>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</debug.opts>
-         </properties>
       </profile>
    </profiles>
 </project>
